--- a/src/Components/CategoryCards.css
+++ b/src/Components/CategoryCards.css
@@ -6,3 +6,30 @@
     padding-top: 40px;
     padding-bottom: 40px;
 }
+  
+.card {
+    background: #fff;
+    overflow: hidden;
+    cursor: pointer;
+    transition: all ease 200ms;
+  }
+  
+  .card:hover {
+    transform: scale(1.03);
+    box-shadow: 0 13px 40px -5px hsla(240, 30.1%, 28%, 0.12), 0 8px 32px -8px hsla(0, 0%, 0%, 0.14), 0 -6px 32px -6px hsla(0, 0%, 0%, 0.02);
+  }
+  
+
+
+  .card:hover {
+    transform: scale(1.03);
+    box-shadow: 0 13px 40px -5px hsla(240, 30.1%, 28%, 0.12), 0 8px 32px -8px hsla(0, 0%, 0%, 0.14), 0 -6px 32px -6px hsla(0, 0%, 0%, 0.02);
+  }
+  
+  .card img {
+    width: 100%;
+    object-fit: cover;
+  }
+
+
+  
