--- a/src/Components/CategoryCards.css
+++ b/src/Components/CategoryCards.css
@@ -32,4 +32,12 @@
   }
 
 
+  .card-title{
+    background: "#212529";
+    color:#fff;
+    font-size: 32px !important;
+    padding: 10px;
+    text-align: center;
+  }
+
   
